update type definitions and remove unused code; add inventory and recipe hooks